引入实时聊天框

--- a/public/games-external/common/index.htm
+++ b/public/games-external/common/index.htm
@@ -43,5 +43,7 @@
       document.getElementById('myIframe').src = myParam
     </script>
     <script src="/js/fullscreen.js" type="text/javascript"></script>
+    <script src="//widget.manychat.com/1812711_376ae.js" defer="defer"></script>
+    <script src="https://mccdn.me/assets/js/widget.js" defer="defer"></script>
   </body>
 </html>
