--- a/public/games-external/common/index.htm
+++ b/public/games-external/common/index.htm
@@ -22,6 +22,15 @@
       }
     </style>
   </head>
+  <header>
+    <!-- Start of SleekFlow Embed Code -->
+    <script src="https://chat.sleekflow.io/embed_iframe.js"
+            data-id="travischatwidget"
+            data-companyid="32010348-eeb6-4e0c-92a4-14e253c49a42"
+            type="text/javascript">
+    </script>
+    <!-- End of SleekFlow Embed Code -->
+  </header>
   <body>
     <!-- <div style="position: absolute;
     right: 0px;
@@ -43,6 +52,5 @@
       document.getElementById('myIframe').src = myParam
     </script>
     <script src="/js/fullscreen.js" type="text/javascript"></script>
-
   </body>
 </html>
